kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cogni-sync
  labels:
    name: cogni-sync
    environment: production
